# vimbuilder

./: .gitignore  README.md  pyproject.toml
src/vimbuilder/: __init__.py  builder.py
tests/: run.sh
