[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vimbuilder"
version = "0.0.1"
authors = [
  { name="Girish Palya", email="girishji@gmail.com" },
]
description = "Sphinx extension to generate documents in Vim help format"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/girishji/vimbuilder"
"Bug Tracker" = "https://github.com/girishji/vimbuilder/issues"
